# TempMonitor

./: .gitignore
client/: CMakeLists.txt
client/src/: main.cpp
firmware/src/: main.cpp
web/: server.js
